# deepagents-example

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check.md  commit.md
app/: main.py
app/core/config/: settings.py
app/core/llm_monitor/: langfuse.py  llm_monitor_loader.py  schemas.py
app/llms/: llm.py
app/utils/: logging.py
deepagents/: graph.py  model.py  sub_agent.py  tools.py
