[project]
name = "deepagents-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.3",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.30",
    "langfuse>=3.2.2",
    "langgraph>=0.6.3",
    "pip-system-certs>=5.2",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "tavily-python>=0.7.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.dev]
# for production, expose "ENV" variable, like "ENV=prod poe dev"
cmd = "uv run fastapi dev"

[tool.poe.tasks.lint]
cmd = "uv run ruff check"

[tool.poe.tasks.lint-fix]
cmd = "uv run ruff check --fix"

[tool.poe.tasks.format]
sequence = [
    { cmd = "uv run ruff format" },
    { cmd = "uv run ruff check --select I --fix" },
]
default_item_type = "cmd"
